syntax = "proto3";

// protoc-gen-go 版本大于1.4.0, proto文件需要加上go_package,否则无法生成
option go_package = "./messageRpc";

package message;

message SendPhoneReq {
  string phone = 1;
  string phoneArea = 2;
  repeated string tempData = 3;
  string tempId = 4;
}
message SendImChannelMsgReq {
  string channelId = 1;
  int64 sendType=2;
  string recvUid =5;
  int64 sendAt=7;
  int64 msgType=8;
  string msgContent=9;
  string platId=10;
}
message ResultResp{
  int64 code = 1;
  string content = 2;
}


service message {
  rpc sendPhone(SendPhoneReq) returns(ResultResp);
  rpc sendPhoneAsync(SendPhoneReq) returns(ResultResp);

  rpc sendImChannelMsg(SendImChannelMsgReq) returns(ResultResp);
  rpc sendImChannelMsgAsync(SendImChannelMsgReq) returns(ResultResp);
}